fix cutofff

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -47,6 +47,13 @@ html {
     justify-content: center;
 }
 
+.centered-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    min-height: 100%;
+}
+
 .social-links {
     list-style: none;
     padding-left: 0px;
